--- a/index.html
+++ b/index.html
@@ -23,12 +23,21 @@
 
 		<p class= "pink italic spacing">
 
-		Hello my name is Grace Lee.
+		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
+		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
+		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
+		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
+
+
+
 		</p>
 
 
 		<p> 
-		Coding is so fun.
+		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
+		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
+		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
+		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
 
 		</p>
 
