--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				font-style:italic;
 			}
 			.spacing{
-				padding: 5px 10px;
+				padding: 10px 15px;
 			}
 
 		</style>
@@ -33,7 +33,7 @@
 		</p>
 
 
-		<p> 
+		<p class= spacing> 
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
