--- a/index.html
+++ b/index.html
@@ -41,6 +41,25 @@
 
 		</p>
 
+		<p class= "pink italic spacing">
+
+		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
+		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
+		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
+		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
+
+
+
+		</p>
+
+		<p class= spacing> 
+		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
+		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
+		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
+		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
+
+		</p>
+
 
 
 	</body>
