strong added to pink

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
 
 		<p class= "pink italic spacing">
-
+		<strong>
 		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
 		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
 		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
 		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
 
-
+		</strong>
 
 		</p>
 
@@ -42,13 +42,13 @@
 		</p>
 
 		<p class= "pink italic spacing">
-
+		<strong>
 		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
 		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
 		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
 		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
 
-
+		</strong>
 
 		</p>
 
