--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 	<body>
 
 
-		<p class= "pink italic spacing">
-		<strong>
+		<strong> <p class= "pink italic spacing">
+		
 		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
 		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
 		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
 		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
 
-		</strong>
+		
 
 		</p>
-
+		</strong>
 
 		<p class= spacing> 
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
@@ -41,16 +41,16 @@
 
 		</p>
 
-		<p class= "pink italic spacing">
-		<strong>
+		<strong> <p class= "pink italic spacing">
+		
 		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
 		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
 		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
 		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
 
-		</strong>
+		
 
-		</p>
+		</p> </strong>
 
 		<p class= spacing> 
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
