relative positioning added

--- a/index.html
+++ b/index.html
@@ -15,13 +15,22 @@
 				padding: 15px 15px 15px 15px;
 			}
 
+			.relative{
+				height:300px
+				width; 300px
+				bakcground-color; #dadada;
+				postition:relative;
+				top:100px;
+				left:150px;
+			}
+
 		</style>
 	</head>
 
 	<body>
 
 
-		<strong> <p class= "pink italic spacing">
+		<strong> <p class= "pink italic relative">
 		
 		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
 		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
