--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			.relative{
 				height:300px
 				width; 300px
-				bakcground-color; #dadada;
-				postition:relative;
+				background-color; #dadada;
+				position:relative;
 				top:100px;
 				left:150px;
 			}
