--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 			}
 
 			.relative{
-				height:300px
-				width; 300px
+				height:300px;
+				width:300px;
 				background-color; #dadada;
 				position:relative;
 				top:100px;
 				left:150px;
 			}
+
+			.
 
 		</style>
 	</head>
