--- a/index.html
+++ b/index.html
@@ -52,7 +52,26 @@
 
 		</p>
 
-		<strong> <p class= "pink italic spacing">
+		<strong> <p class= "pink italic relative">
+		
+		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
+		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
+		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
+		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
+
+		
+
+		</p> 
+
+		<p class= spacing> 
+		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
+		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
+		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
+		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
+
+		</p>
+
+		<strong> <p class= "pink italic relative">
 		
 		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
 		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
@@ -63,6 +82,7 @@
 
 		</p> </strong>
 
+
 		<p class= spacing> 
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
@@ -70,6 +90,17 @@
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
 
 		</p>
+
+		<strong> <p class= "pink italic relative">
+		
+		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
+		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
+		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
+		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
+
+		
+
+		</p> </strong>
 
 
 
