--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
 				top:100px;
 				left:150px;
 			}
+			.horizontal-center{
 
+				height: 300px;
+				width:300px;
+				background color: #dadada;
+				margin: 300px auto;
+			}
 			.
 
 		</style>
@@ -32,7 +38,7 @@
 	<body>
 
 
-		<strong> <p class= "pink italic relative">
+		<strong> <p class= "pink italic horizontal-center">
 		
 		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
 		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
