--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
 				background color: #dadada;
 				margin: 300px auto;
 			}
-			.
+			.pattern-1{
+				float:left;
+				width:200px;
+				height:200px;
+				margin:25px;
+				background-color: #dadada;
+			}
 
 		</style>
 	</head>
