--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			.relative{
 				height:300px;
 				width:300px;
-				background-color; #dadada;
+				background-color: #dadada;
 				position:relative;
 				top:100px;
 				left:150px;
