--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				width:200px;
 				height:200px;
 				margin:25px;
-				background-color: #black;
+				background-color: black;
 			}
 
 		</style>
