--- a/index.html
+++ b/index.html
@@ -37,6 +37,26 @@
 				margin:25px;
 				background-color: black;
 			}
+			.container{
+				width: 80%
+				overflow:auto;
+				border:1px solid blue;
+
+			}
+			img{
+				float:left;
+				width: 50px;
+				height: 50px;
+				margin: 20px;
+
+			}
+
+			<div class="container">
+				<img src="image.jpg">
+				<img src="image.jpg">
+				<img src="image.jpg">
+
+			</div>
 
 		</style>
 	</head>
