--- a/index.html
+++ b/index.html
@@ -51,17 +51,18 @@
 
 			}
 
-			<div class="container">
-				<img src="image.jpg">
-				<img src="image.jpg">
-				<img src="image.jpg">
 
-			</div>
 
 		</style>
 	</head>
 
 <div class="pattern-1">
+<div class="container">
+				<img src="image.jpg">
+				<img src="image.jpg">
+				<img src="image.jpg">
+
+			</div>
 </div>
 	
 	<body>
@@ -70,7 +71,7 @@
 		</div>
 
 
-		<strong> <p class= "pink italic horizontal-center">
+		<strong> <p class= "pink italic horizontal-center container">
 		
 		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
 		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
@@ -90,7 +91,7 @@
 
 		</p>
 
-		<strong> <p class= "pink italic relative">
+		<strong> <p class= "pink italic horizontal-center container">
 		
 		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
 		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
@@ -109,7 +110,7 @@
 
 		</p>
 
-		<strong> <p class= "pink italic relative">
+		<strong> <p class= "pink italic horizontal-center container">
 		
 		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
 		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
