added pictures on block

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
 <div class="pattern-1">
 <div class="container">
-				<img src="image.jpg">
-				<img src="image.jpg">
-				<img src="image.jpg">
+				<img src="Screen Shot 2017-01-08 at 12.05.05 AM.jpg">
+				<img src="Screen Shot 2017-01-08 at 12.05.05 AM.jpg">
+				<img src="Screen Shot 2017-01-08 at 12.05.05 AM.jpg">
 
 			</div>
 </div>
