--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 				background-color: black;
 			}
 			.container{
-				width: 80%
-				overflow:auto;
-				border:1px solid blue;
+				width: 80%;
+				overflow: auto;
+				border:1px pink;
 
 			}
 			img{
@@ -64,6 +64,9 @@
 
 
 			<div class="container">
+				<img src="jello.jpg">
+				<img src="jello.jpg">
+				<img src="jello.jpg">
 				<img src="jello.jpg">
 				<img src="jello.jpg">
 				<img src="jello.jpg">
