--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</div>
 
 
-			<div class="container">
+			<div class="container horizontal-center">
 				<img src="jello.jpg">
 				<img src="jello.jpg">
 				<img src="jello.jpg">
