--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				width:200px;
 				height:200px;
 				margin:25px;
-				background-color: black;
+				background-color: pink;
 			}
 			.container{
 				width: 80%;
@@ -58,7 +58,7 @@
 	</head>
 	
 	<body>
-			<div class="pattern-1">
+			<div class="pattern-1 horizontal-center">
 
 			</div>
 
