--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 		</p>
 
-		<strong> <p class= "pink italic relative">
+		<strong> <p class= "pink italic horizontal-center container">
 		
 		Hello my name is Grace Lee. Hello my name is Grace Lee. Hello my name is Grace Lee.
 		Hello my name is Grace Lee.	Hello my name is Grace Lee.	Hello my name is Grace Lee.
