--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		</p>
 		</strong>
 
-		<p class= spacing> 
+		<p class= "spacing"> 
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
@@ -114,7 +114,7 @@
 
 		</p> 
 
-		<p class= spacing> 
+		<p class= "spacing"> 
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
@@ -134,7 +134,7 @@
 		</p> </strong>
 
 
-		<p class= spacing> 
+		<p class= "spacing"> 
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
 		Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.Coding is so fun.
